--- a/experiment-1.ipynb
+++ b/experiment-1.ipynb
@@ -1062,8 +1062,8 @@
     "# x-axis data points\n",
     "x = np.linspace(start=-50, stop=50)\n",
     "\n",
-    "# y-axis data points\n",
-    "y = x ** 11\n",
+    "# y-axis data\n",
+    "y = x ** 1\n",
     "\n",
     "# define the plot\n",
     "fig = px.scatter(x=x, y=y)\n",
